Elementor popup - Notice alignment issue

--- a/inc/assets/css/admin.css
+++ b/inc/assets/css/admin.css
@@ -1292,7 +1292,7 @@ body.loading-content .select-page-builder {
 	height: auto;
 }
 #astra-sites-admin {
-    margin-right: 20px;
+    margin-right: 25px;
     margin-left: 25px;
     margin-top: 40px;
 }
